Fixed service images on mobile breakpoints

--- a/src/styles/home.styl
+++ b/src/styles/home.styl
@@ -90,7 +90,7 @@
     .column
       img
         height 200px
-        min-width 420px
+        min-width calc(100% + 2em)
       .caption
         bottom 2em
 
